RESOLVED FIXED54345
Crash in RenderLayerCompositor::updateCompositingLayers when loading some sites
https://bugs.webkit.org/show_bug.cgi?id=54345
Summary Crash in RenderLayerCompositor::updateCompositingLayers when loading some sites
Chris Marrin
Reported 2011-02-12 15:20:58 PST
Loading sites that have compositing layers with WebKit2 can crash because RenderLayerCompositor::enableCompositingMode sometimes gets re-entered when setting up layers. This only happens with a 32 bit build because it depends on plugins (like Flash) getting a layer. It is also timing related so it doesn't always happen.
Attachments
Patch (4.64 KB, patch)
2011-02-12 15:34 PST, Chris Marrin
mitz: review+
Chris Marrin
Comment 1 2011-02-12 15:21:19 PST
Chris Marrin
Comment 2 2011-02-12 15:34:15 PST
Chris Marrin
Comment 3 2011-02-12 16:18:24 PST
Note You need to log in before you can comment on or make changes to this bug.